# learning_note

./: .gitignore  README.md
Program_C/: CMakeLists.txt  Makefile  README.md
Program_C/0.0.0_hello_world/: 0.0.0_helloworld.c  CMakeLists.txt  Makefile
Program_C/1.15.0_keyword_union/: 1.15.0_keyword_union.c
Program_C/1.17.0_keyword_typedef/: 1.17.0_keyword_typedef.c
Program_C/1.3.1_keyword_static/: 1.3.1_keyword_static.c
Program_C/1.4.0_keyword_signed/: 1.4.0_keyword_signed.c
Program_C/1.5.2_keyword_sizeof/: 1.5.2_keyword_sizeof.c
Program_C/1.6.0_keyword_ifelse/: 1.6.0_keyword_ifelse.c
Program_C/2.5.2_keyword_symbol/: 2.5.2_keyword_symbol.c
Program_C/3.1.6_preprocess_undef/: 3.1.6_preprocess_undef.c  Makefile
Program_C/3.6.8_preprocess_memAlign/: 3.6.8_preprocess_memAlign.c
Program_C/4.1.3_cpointer/: 4.1.3_cpointer.c
Program_C/4.6.1_array_pointer/: 4.6.1_array_pointer.c
Program_C/4.7.2_pointer_fun/: 4.7.2_pointer_fun.c
Program_C/include/: 0.0.0_helloworld.h  1.15.0_keyword_union.h  1.17.0_keyword_typedef.h  1.3.1_keyword_static.h  1.4.0_keyword_unsigned.h  1.5.2_keyword_sizeof.h  1.6.0_keyword_ifelse.h  2.5.2_keyword_symbol.h  3.1.6_preprocess_undef.h  3.6.8_preprocess_memAlign.h  4.1.3_cpointer.h  4.6.1_array_pointer.h  4.7.2_pointer_fun.h  lk_debug.h
Program_C/main/: CMakeLists.txt  main.c
art_of_programming/: Makefile
art_of_programming/inc/: lk_debug.h  test_api.h
art_of_programming/src/: Makefile  covert_string_test.c  covert_string_test_use_dlistnode.c  find_longest_palindrome.c  flip_number_test_use_listnode.c  judge_string_contain.c  main.c  words_flip_test.c
singleListNode_in_C_ops/inc/: test_api.h
singleListNode_in_C_ops/src/: main.c  single_list_node_ops.c
